--- a/package.json
+++ b/package.json
@@ -77,8 +77,10 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
     "@hot-loader/react-dom": "^16.8.3",
+    "babel-cli": "^6.26.0",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
+    "babel-preset-env": "^1.7.0",
     "cross-env": "^5.2.0",
     "eslint": "^5.15.1",
     "eslint-plugin-react": "^7.12.4",
