attempting to join ingredients (spoiler: Failing)

--- a/.gitignore
+++ b/.gitignore
@@ -63,6 +63,9 @@ typings/
 # pickle data files
 *.pkl
 *.json
+data_processing/zestful/ingredients.txt
+data_processing/zestful/finalpred.txt
+
 
 # custom
 package-lock.json
