--- a/package.json
+++ b/package.json
@@ -55,27 +55,28 @@
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-redux": "^6.0.1",
+    "react-router": "^5.0.0",
     "react-router-dom": "^4.4.0-beta.7",
     "redux": "^4.0.1",
     "redux-form": "^8.1.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "serve-favicon": "^2.5.0",
-    "swagger-jsdoc": "^3.2.9",
+    "webpack": "^4.30.0",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^3.8.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.4.0",
+    "@babel/cli": "^7.4.3",
+    "@babel/core": "^7.4.3",
     "@babel/node": "^7.2.2",
     "@babel/plugin-proposal-class-properties": "^7.3.4",
     "@babel/plugin-proposal-function-bind": "^7.2.0",
     "@babel/preset-env": "^7.4.2",
     "@babel/preset-react": "^7.0.0",
-    "@babel/register": "^7.0.0",
+    "@babel/register": "^7.4.0",
     "@hot-loader/react-dom": "^16.8.3",
-    "babel-cli": "^6.26.0",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
     "babel-preset-env": "^1.7.0",
@@ -86,7 +87,6 @@
     "nodemon": "^1.18.10",
     "react-hot-loader": "^4.7.2",
     "rimraf": "^2.6.3",
-    "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3",
     "webpack-dev-middleware": "^3.6.0",
     "webpack-dev-server": "^3.2.1",
