--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ APP_HOST=127.0.0.1
 NODE_ENV = development
 
 # Database
-DB_CLIENT=mysql
+DB_CLIENT=sqlplus
 DB_HOST=localhost
 DB_USER=<YOUR_DB_USER>
 DB_PASSWORD=<YOUR_DB_PASSWORD>
