--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "method-override": "^3.0.0",
     "morgan": "^1.9.1",
     "mysql": "^2.16.0",
+    "oracledb": "^3.1.2",
     "path": "^0.12.7",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
