--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "serve-favicon": "^2.5.0",
+    "sql-injection": "0.0.6",
     "webpack": "^4.30.0",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^3.8.0"
