--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "dotenv": "^6.2.0",
     "express": "^5.0.0-alpha.7",
     "fuse.js": "^3.4.4",
+    "fuzzysort": "^1.1.4",
     "helmet": "^3.15.1",
     "history": "^4.7.2",
     "http-status-codes": "^1.3.0",
